--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 :root {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
@@ -20,11 +27,11 @@ body {
   min-height: 100vh;
 }
 
-header {
-  background: #eee;
+/* header {
+  background: #eee; 
   margin: 0rem;
   padding: 1rem;
-}
+} */
 
 main {
   background: #aca4a4;
