--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 /* :root is equal to html element */
-/* Define: Global font, colour, line height */
+/* TODO: define -> global font, colour, line height */
 :root {
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
@@ -26,16 +26,33 @@ body {
 }
 
 header {
+  position: relative;
   color: #fff;
   width: 100%;
   height: 400px;
+
   background-image: url("./assets/header.jpg");
   background-size: cover;
   background-position: center 70%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  overflow: hidden;
+
+  /* start */
+  opacity: 0;
+
+  /* animation */
+  animation: fadeInHeader 6s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+}
+
+@keyframes fadeInHeader {
+  to {
+    opacity: 1;
+  }
 }
 
 main {
