--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,6 @@ main {
   flex-direction: column;
   color: #fff;
   overflow: hidden;
-  display: flex;
   padding: 5rem;
   /* gap: 4rem; */
 }
@@ -233,6 +232,8 @@ main {
 .contact a {
   color: #333333;
   text-decoration: none;
+  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 
 .contact a:hover {
@@ -270,7 +271,6 @@ footer {
 
 h3 {
   font-size: 25px;
-  line-height: 1;
   font-weight: 300;
   line-height: 1.5;
   padding-bottom: 1rem;
@@ -278,7 +278,6 @@ h3 {
 
 p {
   font-size: 18px;
-  line-height: 1;
   font-weight: 300;
   line-height: 1.5;
   padding-bottom: 2rem;
