--- a/src/index.css
+++ b/src/index.css
@@ -178,22 +178,12 @@ main {
   background-color: var(--color-bg-main);
 }
 
+/* Mobil first */
 .welcome-education-profil-container {
   display: flex;
-  gap: 3rem;
-  padding: 5rem;
-}
-
-#welcome {
-  flex: 8;
-}
-
-#education {
-  flex: 5;
-}
-
-#profil {
-  flex: 5;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
 }
 
 #profil img {
@@ -203,6 +193,43 @@ main {
   height: auto;
   object-fit: cover;
   max-width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .welcome-education-profil-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
+    padding: 5rem 10rem;
+    align-items: flex-start;
+  }
+
+  #welcome {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  #education,
+  #profil {
+    flex: 1;
+  }
+
+  #profil {
+    display: flex;
+    justify-content: center;
+  }
+
+  #profil img {
+    max-width: 250px;
+    width: 100%;
+    height: auto;
+  }
+
+  /* TODO: Hardcoded */
+  #welcome p {
+    font-size: 1.375rem;
+    line-height: 1.65;
+  }
 }
 
 /* =====================
@@ -350,7 +377,7 @@ p {
   font-family: var(--font-family-base);
   font-size: var(--font-size-md);
   font-weight: var(--font-weight-light);
-  padding-bottom: 2rem;
+  padding-bottom: 1em;
 }
 
 #education p span {
