--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,8 @@ main {
   width: 100%;
   margin: 0 auto;
   align-items: center;
-  background-color: var(--color-bg-main);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  /* background-color: var(--color-bg-main); */
 }
 
 /* Mobil first */
@@ -186,6 +187,11 @@ main {
   padding: 2rem;
 }
 
+#welcome p {
+  text-align: justify;
+  text-align-last: left;
+}
+
 #profil img {
   display: block;
   margin: 0;
@@ -193,6 +199,10 @@ main {
   height: auto;
   object-fit: cover;
   max-width: 100%;
+}
+
+.merged {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -209,7 +219,12 @@ main {
     max-width: 100%;
   }
 
-  #education,
+  /* TODO: Desktop padding-left: 100px  */
+  #education {
+    flex: 1;
+    padding-left: 20px;
+  }
+
   #profil {
     flex: 1;
   }
@@ -220,7 +235,7 @@ main {
   }
 
   #profil img {
-    max-width: 250px;
+    max-width: 170px;
     width: 100%;
     height: auto;
   }
@@ -229,6 +244,13 @@ main {
   #welcome p {
     font-size: 1.375rem;
     line-height: 1.65;
+  }
+
+  .responsive {
+    display: none; /* alle einzelnen verstecken */
+  }
+  .merged {
+    display: block; /* zusammengefasster Paragraph */
   }
 }
 
