--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 2rem;
+  padding: 0rem;
 }
 
 #welcome p {
@@ -216,6 +216,21 @@ main {
   max-width: 100%;
 }
 
+#profil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.profile-picture {
+  transition: transform 0.3s;
+}
+
+.profile-picture:hover {
+  transform: scale(1.05);
+}
+
 .merged {
   display: none;
 }
@@ -225,7 +240,7 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 3rem;
-    padding: 5rem 10rem;
+    padding: 5rem 5rem;
     align-items: flex-start;
   }
 
@@ -234,34 +249,30 @@ main {
     max-width: 100%;
   }
 
-  /* TODO: Desktop padding-left: 100px  */
   #education {
-    flex: 1;
-    padding-left: 20px;
+    flex: 2;
   }
 
   #profil {
-    flex: 1;
-  }
-
-  #profil {
+    flex: 6;
     display: flex;
     justify-content: center;
   }
 
   #profil img {
-    max-width: 170px;
+    max-width: 200px;
     width: 100%;
     height: auto;
   }
 
   /* TODO: Hardcoded */
   #welcome p {
-    font-size: 1.375rem;
+    /* font-size: 1.375rem; */
     line-height: 1.65;
   }
 
   .responsive {
+    /* padding-left: 1rem; */
     display: none; /* alle einzelnen verstecken */
   }
   .merged {
@@ -277,7 +288,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 800px;
+  /* min-height: 800px; */
   padding: 5rem;
   overflow: hidden;
   color: var(--color-text-skills);
@@ -299,6 +310,45 @@ main {
 .skills-container > * {
   position: relative;
   z-index: 1;
+}
+
+.skill-section {
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  padding: 1rem 1rem 1rem 2rem;
+}
+
+.skill-section:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+ul.skill-groups {
+  grid-column: span 2;
+  padding-left: 30px;
+  padding-left: 1.5rem; /* oder 24px */
+}
+
+.icon {
+  font-weight: bold;
+}
+
+.icon {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.skill-section.open .icon {
+  transform: rotate(90deg);
+}
+
+.skill-items span {
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 2px 6px;
+  border-radius: 4px;
+  margin: 2px 2px 2px 0;
+  font-size: 0.875rem;
 }
 
 @media screen and (min-width: 992px) {
